Keybinds for octaves & removed custom waveform option.
Signed-off-by: sandermfc <mathieu.robinson17@gmail.com>

--- a/index.html
+++ b/index.html
@@ -88,8 +88,9 @@
     <div class="row">
         <div class="col-sm-12">
             <div class="octaveButtons">
-                <button id="octaveDown" style="width:40px;height:30px;" class="noselect">-</button>
-                <button id="octaveUp" style="width:40px;height:30px;" class="noselect">+</button>
+                Octave:  
+                <button id="octaveDown" style="width:40px;height:30px;" class="noselect">Z</button>
+                <button id="octaveUp" style="width:40px;height:30px;" class="noselect">X</button>
             </div>
         </div>
     </div>
@@ -105,7 +106,6 @@
                     <option value="square" selected>Square</option>
                     <option value="sawtooth">Sawtooth</option>
                     <option value="triangle">Triangle</option>
-                    <option value="custom">Custom</option>
                 </select>
             </div>
         </div>
@@ -123,7 +123,7 @@
                             </br>
                                 <li>If you have access to a keyboard, you can use the keys on your keyboard associated to the piano, these are shown on the visual component.</li>
                             </ul>
-                        <h4>Click the - or + buttons to change octaves or use the z/x keys.</h4>
+                        <h4>Click the z or x keys to change octaves.</h4>
                         <h4>Change the values on the button board to try different sounds!</h4>
                         <h4><b>To record:</b> click the record button in the top right of the Web Synthesizer.</h4>
                         <h4><b>To see user recordings:</b> <a href="search.html">Click here</a> or click the Search tab.</h4>
