Added save button
Signed-off-by: NeatAbacus <grossetempetedeneigede1985@gmail.com>

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
     <div class="row">
         <div class="col-sm-12"> 
             <div class="recordPlayButtonContainer">
+		    <button id="save" class="noselect">Save</button>
                 <button id="playButton" class="noselect"><img src="images/PlayButton.png" style="width:20px;height:20px;"></button>
                 <button id="recordButton" class="noselect"><img src="images/recordbutton.png" style="width:20px;height:20px;"></button>
             </div>
