--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 <p id="volumeText"><b>Volume: </b></p><input type="range" min="1" max="100" value="50" class="slider" id="myRange">
             </div>
             <div class="octaveButtons">
-                Octave:  
+                <p style="margin-top:3%;"><b>Change Octave Down/Up:</b></p>
                 <button id="octaveDown" style="width:40px;height:30px;" class="noselect">Z</button>
                 <button id="octaveUp" style="width:40px;height:30px;" class="noselect">X</button>
             </div>
