Updated music.php and search.html
Signed-off-by: NeatAbacus <grossetempetedeneigede1985@gmail.com>

--- a/search.html
+++ b/search.html
@@ -26,7 +26,11 @@
                 x.className = "topNavMenu";
             }
         }
-	
+
+	function playTrack(trackid) {
+		console.log(trackid);	
+	}
+
 	$(document).ready(function(){
 		$('#searchinputs').children().hide();
 		$($('#searchType').val()).show();
