--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
                         <h4>Change the values on the button board to try different sounds!</h4>
                         <h4><b>To record:</b> Click the record button in the top right of the Web Synthesizer.</h4>
                         <h4><b>To listen to your recording:</b> Click the play button in the top right of the Web Synthesizer.</h4>
+                        <h4><b>To save your recording:</b> Click the save button in the top right of the Web Synthesizer.</h4>
                         <h4><b>To see user recordings:</b> <a href="search.html">Click here</a> or click the Search tab.</h4>
                 </div>
             </div>
