--- a/search.html
+++ b/search.html
@@ -28,8 +28,6 @@
         }
 
 	function playTrack(trackid) {
-		console.log(trackid);
-		//alert("Playing track.. beep boop bleep bop");
 		$.ajax({
 			url : 'scripts/playmusic.php',
 			type : 'GET',
@@ -37,9 +35,6 @@
 			dataType : 'html',
 			success : function(res, statut)
 			{
-				console.log("playing music");
-				//var trackurl = URL.createObjectURL(res);
-				//var playaudio = new Audio(trackurl);
 				var playaudio = new Audio('scripts/tracks/' + res);
 				playaudio.play();
 			}
@@ -47,30 +42,35 @@
 	}
 
 	$(document).ready(function(){
-		$('#searchinputs').children().hide();
-		$($('#searchType').val()).show();
-		$('#searchType').change(function(){
-			selected = $(this).val();
-			$('#searchinputs').children().hide();
-			$(selected).show();	
-		});
-		$('#startsearch').click(function () {
+		$('#searchinput').on('input', function () {
+			if(!$(this).val()) {$('#searchresults').empty();}		
+			else {
 			var field = $('#searchType').val();
-			var column = $(field).attr('name');
-			var val = $(field).val();
-			console.log(val + ` ` + column + ` ` + field);
-			if($(field)[0].checkValidity()){
+			var val = $('#searchinput').val();
+			if($('#searchinput')[0].checkValidity()){
+				$.ajax({
+				url : 'scripts/music.php',
+				type : 'GET',
+				data : { 'type': field, 'val': val},
+				dataType : 'html',
+				success : function(res, statut)
+				{
+					$('#searchresults').html(res);
+				}
+				});
+			}
+			}
+		});
+		$('#showall').click(function () {
 			$.ajax({
-			url : 'scripts/music.php',
-			type : 'GET',
-			data : { 'type': column, 'val': val},
-			dataType : 'html',
-			success : function(res, statut)
-			{
-				$('#searchresults').html(res);
-			}
+				url : 'scripts/showall.php',
+				type : 'GET',
+				success : function(res, statut)
+				{
+					$('#searchresults').html(res);
+				}
 			});
-			}
+		
 		});
 	});
     </script>
@@ -92,18 +92,16 @@
 			<div class="SearchContainer">
 				<label id="SearchBy">Search by </label>
 				<select id="searchType">
-					<option value="#artist">Artist</option>
-					<option value="#name">Name</option>
+					<option value="artist">Artist</option>
+					<option value="name">Name</option>
 				</select><br>
 
 			<div class="SearchInputs" id="searchinputs">
-				<input type="text" pattern="[a-zA-Z0-9 ]+" name="artist" id="artist"></input><br>
-				<input type="text" pattern="[a-zA-Z0-9 ]+" name="name" id="name"></input><br>
+				<input type="text" pattern="[a-zA-Z0-9 ]+" name="searchbar" id="searchinput"></input><br>
 			</div>	
 			</div>
 			<div id ="SearchButton">
-				<button type="button" id="startsearch">Search</button><br>	
-
+				<button type="button" id="showall">Show all</button>
 				<div class="SearchResults" id="searchresults">
 
 			</div>
